Update everything to use latest `esp-hal` and `embedded-hal-async 1.0.0`, smoltcp to `0.11.0` (#417)
* Update everything to use latest esp-hal

* Change to upstream as PR is merged

* Remove hard dep on backtrace

* Add required feature for heapless

* Update examples

* Update

* update rev

* Remove patches to crates as they are released

* Remove last patch as  is released

* Update changelog

--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -60,7 +60,11 @@ toml-cfg.workspace = true
 
 [dev-dependencies]
 esp-println = { workspace = true, features = ["log"] }
-esp-backtrace.workspace = true
+esp-backtrace = { workspace = true, features = [
+    "panic-handler",
+    "exception-handler",
+    "print-uart",
+] }
 embassy-executor.workspace = true
 embassy-time.workspace = true
 embassy-net.workspace = true
