--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -765,8 +765,8 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       # Check the formatting of all packages:
-      - name: rustfmt (esp-hal-common)
-        run: cargo fmt --all --manifest-path=esp-hal-common/Cargo.toml -- --check
+      - name: rustfmt (esp-hal)
+        run: cargo fmt --all --manifest-path=esp-hal/Cargo.toml -- --check
       - name: rustfmt (esp-hal-procmacros)
         run: cargo fmt --all --manifest-path=esp-hal-procmacros/Cargo.toml -- --check
       - name: rustfmt (esp-hal-smartled)
