--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -65,9 +65,9 @@ ufmt-write = { version = "0.1.0", optional = true }
 esp32   = { version = "0.28.0", features = ["critical-section"], optional = true }
 esp32c2 = { version = "0.17.0", features = ["critical-section"], optional = true }
 esp32c3 = { version = "0.20.0", features = ["critical-section"], optional = true }
-esp32c6 = { version = "0.11.0", features = ["critical-section"], optional = true }
-esp32h2 = { version = "0.7.0",  features = ["critical-section"], optional = true }
-esp32p4 = { git = "https://github.com/esp-rs/esp-pacs", rev = "c801d10", optional = true }
+esp32c6 = { git = "https://github.com/esp-rs/esp-pacs", rev = "a066f0e", features = ["critical-section"], optional = true }
+esp32h2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "a066f0e", features = ["critical-section"], optional = true }
+esp32p4 = { git = "https://github.com/esp-rs/esp-pacs", rev = "a066f0e", features = ["critical-section"], optional = true }
 esp32s2 = { version = "0.19.0", features = ["critical-section"], optional = true }
 esp32s3 = { version = "0.23.0", features = ["critical-section"], optional = true }
 
