Get the `hello_world` example working using `UART0` instead of ROM function

--- a/esp-hal/devices/esp32p4/device.toml
+++ b/esp-hal/devices/esp32p4/device.toml
@@ -84,7 +84,11 @@ peripherals = [
     # "twai0",
     # "twai1",
     # "twai2",
-    # "uart0",
+    "uart0",
+    "uart1",
+    "uart2",
+    "uart3",
+    "uart4",
     # "uhci0",
     # "usb_device",
     # "usb_wrap",
