--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -9,4 +9,6 @@ anyhow     = "1.0.79"
 clap       = { version = "4.5.0",  features = ["derive"] }
 env_logger = "0.11.1"
 log        = "0.4.20"
+semver     = "1.0.21"
 strum      = { version = "0.26.1", features = ["derive"] }
+toml_edit  = "0.22.5"
