--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -159,7 +159,7 @@ rv-zero-rtc-bss  = ["esp-riscv-rt/zero-rtc-fast-bss"]
 rv-init-rtc-data = ["esp-riscv-rt/init-rtc-fast-data", "esp-riscv-rt/init-rtc-fast-text"]
 
 # Configuration for placing device drivers in the IRAM for faster access
-optimize-spi-in-iram = []
+place-spi-driver-in-ram = []
 
 # Enable the `impl-register-debug` feature for the selected PAC
 debug = [
